2011-10-27  John Knottenbelt  <jknotten@chromium.org>

        [Chromium] Allow DRT to be built without notifications enabled.
        https://bugs.webkit.org/show_bug.cgi?id=70919

        Reviewed by Tony Gentilcore.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::grantDesktopNotificationPermission):
        (LayoutTestController::simulateDesktopNotificationClick):
        * DumpRenderTree/chromium/NotificationPresenter.cpp:
        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::TestShell):
        (TestShell::resetTestController):

2011-10-21  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        [Qt] Improve command line arguments handling for MiniBrowser.
        https://bugs.webkit.org/show_bug.cgi?id=70616

        Reviewed by Kenneth Rohde Christiansen.

        - Use two dashes for word arguments.
        - Return with an error when an unsupported argument is given.
        - Allow the URL to be placed before option arguments.

        * MiniBrowser/qt/MiniBrowserApplication.cpp:
        (printHelp):
        (MiniBrowserApplication::handleUserOptions):
        * MiniBrowser/qt/utils.cpp:
        (takeOptionFlag):
        (takeOptionValue):
        * MiniBrowser/qt/utils.h:

2011-10-27  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] NRWT doesn't work on qt-mac platform
        https://bugs.webkit.org/show_bug.cgi?id=64445

        Reviewed by Adam Barth.

        * Scripts/run-webkit-tests: Switch qt-mac platform to NRWT.
        (useNewRunWebKitTests):
        * Scripts/webkitpy/layout_tests/port/qt.py: Fix library path on Mac.

2011-10-26  Sam Weinig  <sam@webkit.org>

        Add initial setting to WKBrowsingContextGroup
        https://bugs.webkit.org/show_bug.cgi?id=70942

        Reviewed by Anders Carlsson.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2ObjC/WKBrowsingContextGroupTest.mm: Added.