@@ -142,8 +142,12 @@ class ChromiumPortTest(port_testcase.PortTestCase):
             TestConfiguration('snowleopard', 'x86', 'release', 'gpu-cg'),
             TestConfiguration('lion', 'x86', 'debug', 'cpu'),
             TestConfiguration('lion', 'x86', 'debug', 'gpu'),
+            TestConfiguration('lion', 'x86', 'debug', 'cpu-cg'),
+            TestConfiguration('lion', 'x86', 'debug', 'gpu-cg'),
             TestConfiguration('lion', 'x86', 'release', 'cpu'),
             TestConfiguration('lion', 'x86', 'release', 'gpu'),
+            TestConfiguration('lion', 'x86', 'release', 'cpu-cg'),
+            TestConfiguration('lion', 'x86', 'release', 'gpu-cg'),
             TestConfiguration('xp', 'x86', 'debug', 'cpu'),
             TestConfiguration('xp', 'x86', 'debug', 'gpu'),
             TestConfiguration('xp', 'x86', 'release', 'cpu'),
