@@ -1,3 +1,13 @@
+2011-10-27  Elliot Poger  <epoger@google.com>
+
+        make lion observe MAC lines in test_expectations.txt
+        https://bugs.webkit.org/show_bug.cgi?id=70941
+
+        Reviewed by Ojan Vafai.
+
+        * Scripts/webkitpy/layout_tests/port/chromium.py:
+        * Scripts/webkitpy/layout_tests/port/chromium_unittest.py:
+
 2011-10-27  John Knottenbelt  <jknotten@chromium.org>
 
         [Chromium] Allow DRT to be built without notifications enabled.
